--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -28,7 +28,7 @@ As detailed in \reflst{lst:diacriticless.sh}, this script is used for creating d
   sed 's/.*/\L&/' "$1" | iconv -f utf-8 -t ascii//TRANSLIT > diacriticless/"$1"
 \end{lstlisting}
 
-\subsection{Datasets}
+\subsection{Evaluation  benchmark}
 
 \subsubsection{UPV FAQ}
 
@@ -269,26 +269,6 @@ This study incorporates two distilled transformer models from TaylorAI for evalu
 %\subsection{mxbai-embed-large-v1}
 
 \section{Optimizing Text Representations for RAG in Technical QA}
-This section explores the application of \ac{RAG} algorithms for generating natural language answers to questions posed on technical documents.
-We investigate the crucial role of text representations in \ac{RAG}'s effectiveness and outline the evaluation approach to identify optimal representation models for this specific task.
-
-\subsection{RAG Algorithm and Text Representation Reliance}
-The RAG algorithm leverages a two-stage approach for answer generation: retrieval and generation.
-Both stages rely heavily on the chosen text representation technique.
-
-\begin{itemize}
-  \item \textbf{Retrieval}: The algorithm retrieves relevant passages from a technical document (e.g., manual) that address the user's question. To achieve this, RAG represents both the question and potential answer passages using the same text representation model (e.g., word embeddings, sentence embeddings). The similarity between the question and passage representations determines the relevance of a passage for answering the question.  
-  \item \textbf{Generation}: Once retrieved, the passages serve as input for the generation model, which constructs a natural language answer. The quality of the text representation in these retrieved passages is crucial. Rich representations that capture semantic relationships and context allow the generation model to create informative and well-structured answers.  
-\end{itemize}
-
-\begin{figure}[h]
-  \centering
-  \input{src/fig/tikz/RAG_scheme.tex}
-  \caption{\ac{RAG} scheme}
-  \label{fig:RAG_scheme}
-\end{figure} 
-
-
 
 \subsection{Key factors}
 To identify the most suitable text representation model for \ac{RAG} in technical \ac{QA}, we propose a comprehensive evaluation approach that considers the following key factors:
