--- a/main.bib
+++ b/main.bib
@@ -27,7 +27,7 @@
 }
 
 % Transformers
-@misc{transformers,
+@misc{vaswani2023attention,
   title         = {Attention Is All You Need},
   author        = {Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
   year          = {2023},
@@ -276,4 +276,14 @@
       eprint={2205.13147},
       archivePrefix={arXiv},
       primaryClass={cs.LG}
+}
+
+% Retrieval-Augmented Generation
+@misc{lewis2021retrievalaugmented,
+      title={Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks}, 
+      author={Patrick Lewis and Ethan Perez and Aleksandra Piktus and Fabio Petroni and Vladimir Karpukhin and Naman Goyal and Heinrich Küttler and Mike Lewis and Wen-tau Yih and Tim Rocktäschel and Sebastian Riedel and Douwe Kiela},
+      year={2021},
+      eprint={2005.11401},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
 }
