bib: add mxbai-embed-large-v1, mxbai-embed-2d-large-v1, 2D Matryoshka Sentence Embeddings, SetFit

--- a/main.bib
+++ b/main.bib
@@ -112,7 +112,8 @@
       primaryClass={cs.CL}
 }
 
-@article{UAE-Large-V1,
+% AnglE
+@article{li2023angle,
   title={AnglE-optimized Text Embeddings},
   author={Li, Xianming and Li, Jing},
   journal={arXiv preprint arXiv:2309.12871},
@@ -284,6 +285,42 @@
       author={Patrick Lewis and Ethan Perez and Aleksandra Piktus and Fabio Petroni and Vladimir Karpukhin and Naman Goyal and Heinrich Küttler and Mike Lewis and Wen-tau Yih and Tim Rocktäschel and Sebastian Riedel and Douwe Kiela},
       year={2021},
       eprint={2005.11401},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+% mxbai-embed-large-v1
+@online{emb2024mxbai,
+  title={Open Source Strikes Bread - New Fluffy Embeddings Model},
+  author={Sean Lee, Aamir Shakir, Darius Koenig, Julius Lipp},
+  year={2024},
+  url={https://www.mixedbread.ai/blog/mxbai-embed-large-v1},
+}
+
+% mxbai-embed-2d-large-v1
+@online{emb2024mxbai2d,
+  title={Fresh 2D-Matryoshka Embedding Model},
+  author={Sean Lee, Aamir Shakir, Julius Lipp, Darius Koenig},
+  year={2024},
+  url={https://www.mixedbread.ai/blog/mxbai-embed-2d-large-v1},
+}
+
+% 2D Matryoshka Sentence Embeddings
+@misc{li20242d,
+      title={2D Matryoshka Sentence Embeddings}, 
+      author={Xianming Li and Zongxi Li and Jing Li and Haoran Xie and Qing Li},
+      year={2024},
+      eprint={2402.14776},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+% SetFit
+@misc{tunstall2022efficient,
+      title={Efficient Few-Shot Learning Without Prompts}, 
+      author={Lewis Tunstall and Nils Reimers and Unso Eun Seo Jo and Luke Bates and Daniel Korat and Moshe Wasserblat and Oren Pereg},
+      year={2022},
+      eprint={2209.11055},
       archivePrefix={arXiv},
       primaryClass={cs.CL}
 }
