bib: add MEDI dataset,GIST Embedding v0,

--- a/main.bib
+++ b/main.bib
@@ -324,3 +324,23 @@
       archivePrefix={arXiv},
       primaryClass={cs.CL}
 }
+
+% MEDI dataset
+@misc{su2023embedder,
+      title={One Embedder, Any Task: Instruction-Finetuned Text Embeddings}, 
+      author={Hongjin Su and Weijia Shi and Jungo Kasai and Yizhong Wang and Yushi Hu and Mari Ostendorf and Wen-tau Yih and Noah A. Smith and Luke Zettlemoyer and Tao Yu},
+      year={2023},
+      eprint={2212.09741},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+% GIST Embedding v0
+@misc{solatorio2024gistembed,
+      title={GISTEmbed: Guided In-sample Selection of Training Negatives for Text Embedding Fine-tuning}, 
+      author={Aivin V. Solatorio},
+      year={2024},
+      eprint={2402.16829},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
