bib: Fix comas of mxbai

--- a/main.bib
+++ b/main.bib
@@ -292,7 +292,7 @@
 % mxbai-embed-large-v1
 @online{emb2024mxbai,
   title={Open Source Strikes Bread - New Fluffy Embeddings Model},
-  author={Sean Lee, Aamir Shakir, Darius Koenig, Julius Lipp},
+  author={Sean Lee and Aamir Shakir and Darius Koenig and Julius Lipp},
   year={2024},
   url={https://www.mixedbread.ai/blog/mxbai-embed-large-v1},
 }
@@ -300,7 +300,7 @@
 % mxbai-embed-2d-large-v1
 @online{emb2024mxbai2d,
   title={Fresh 2D-Matryoshka Embedding Model},
-  author={Sean Lee, Aamir Shakir, Julius Lipp, Darius Koenig},
+  author={Sean Lee and Aamir Shakir and Julius Lipp and Darius Koenig},
   year={2024},
   url={https://www.mixedbread.ai/blog/mxbai-embed-2d-large-v1},
 }
